# wg-manager

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.release  README.md  SECURITY.md  Taskfile.yml  client.conf.example  config.toml.example  docker-compose.yml  entrypoint.sh  go.mod  go.sum  setup.sh  wg0.conf.example
.github/workflows/: release.yaml
cmd/wg-manager/: main.go
data/wireguard/: wg0.conf
docker/: entrypoint.sh
internal/config/: settings.go
internal/handlers/: auth.go  auth_test.go  peers.go  peers_test.go  runner.go  templates.go  validate.go  validate_test.go
internal/views/: csrf.templ  csrf_templ.go  editpeer.templ  editpeer_templ.go  layout.templ  layout_templ.go  login.templ  login_templ.go  peers.templ  peers_templ.go  settings.templ  settings_templ.go  types.go
internal/wireguard/: address.go  address_test.go  client_config.go  client_config_test.go  commands.go  config_file.go  config_file_test.go  private_to_public.go  setup.go  testhelpers_test.go  types.go
src/: auth.rs  config.rs  main.rs  peer.rs
src/nft/: mod.rs
src/routes/: mod.rs  templates.rs
src/wg/: mod.rs  parser.rs
templates/: base.html  create_interface.html  dashboard.html  generate_peer.html  interface_detail.html  interfaces.html  peer_config.html  peers.html
web/static/: style.css
